[gd_scene load_steps=2 format=3 uid="uid://bemtgxcht20eb"]

[ext_resource type="Script" path="res://scenes/menus/save_data.gd" id="1_v36xd"]

[node name="SaveData" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v36xd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 162.0
offset_right = 1081.0
offset_bottom = 441.0
theme_override_constants/separation = 100
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "SAVE FILE DATA"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SAVE 1"
horizontal_alignment = 1

[node name="Load_Save1" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "LOAD SAVE
- -"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SAVE 2"
horizontal_alignment = 1

[node name="Load_Save2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "LOAD SAVE
-NOT WORKING-"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SAVE 3"
horizontal_alignment = 1

[node name="Load_Save3" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "LOAD SAVE
-NOT WORKING-"

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "NEW GAME"
horizontal_alignment = 1

[node name="Create_Save" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "CREATE SAVE
--"

[node name="Back_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "BACK"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Load_Save1" to="." method="_on_load_save_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer4/Create_Save" to="." method="_on_create_save_pressed"]
[connection signal="pressed" from="VBoxContainer/Back_Button" to="." method="_on_back_button_pressed"]
